hphp/test/zend/bad/Zend/tests/use_function/no_global_fallback.php
<?php

require 'includes/global_baz.php';

use function foo\bar\baz;
var_dump(baz());

?>
